# website-2025

./: .env  .env_example  .gitignore  .local_env_example  README.md  auto.html  commands.md  docker-compose.yml  ege.html  index.html  lk.html  materials.html  oge.html  password.html  pyproject.toml  recovery.html  run_server.bat  signup.html  t.py
.github/workflows/: main.yml
backend/: .env-test  .env_example  .local_env_example  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/src/: config.py  database.py  init.py  main.py
backend/tests/: conftest.py  mock-purchases.json
css/: style.css
frontend/: README.md  basic.html  index.html  lk2.html  login.html  oge.html  passrec.html  password.html  questions.html  red.html  settingpass.html  sup_response_ege.html  sup_response_oge.html
frontend/css/: style_add.css  style_materials.css  style_questions.css  style_response.css
frontend/scripts/: payment.js  script.js
img/: монолог.png:Zone.Identifier
src/: config.py  database.py  init.py  main.py
src/api/: admin.py  auth.py  crud.py  dependencies.py  main.py  payments.py  personal_info.py  products.py  reviews.py  reviews_router.py  root.py  users_router.py
src/connectors/: redis_connector.py
src/dependencies/: auth.py  db.py
src/exceptions/: handlers.py  service_exceptions.py
src/migrations/: env.py
src/models/: __Init__.py  products.py  purchases.py  reviews.py  users.py
src/repositories/: base.py  reviews.py  (+3 more)
tests/: conftest.py
website/: add.html  auto.html  basic.html  ege.html  lk.html  lk2.html  login.html  materials.html  oge.html  passrec.html  password.html  questions.html  recovery.html  red.html  registr.html  response_ege.html  response_oge.html  settingpass.html  signup.html  sup_response_ege.html  sup_response_oge.html  test.html
website_2025/: app.py
(+163 files in other folders)
