[project]
package-mode = false
name = "website-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "nekell3r",email = "pazhabskiy032007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
